Fix spacing in hero header title and reset body margin and padding in CSS and SCSS files for improved layout consistency.

--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Anton&family=Manrope:wght@200..800&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap");
+body {
+  margin: 0;
+  padding: 0;
+}
+
 .hero_header {
   background: url("../assets/images/hero_header.jpg") no-repeat center center;
   height: 50vh;
